clusters/on-prem-cluster/apps/filezilla/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: filezilla
  labels:
    name: filezilla
