clusters/on-prem-cluster/apps/filezilla/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filezilla
  namespace: filezilla
  labels:
    app: filezilla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filezilla
  serviceName: filezilla
  template:
    metadata:
      labels:
        app: filezilla
    spec:
      containers:
      - name: filezilla
        image: lscr.io/linuxserver/filezilla:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 3001
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: filezilla-volume
      volumes:
      - name: filezilla-volume
        persistentVolumeClaim:
          claimName: filezilla-data-pvc
