clusters/on-prem-cluster/apps/filezilla/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filezilla-service
  namespace: filezilla
spec:
  selector:
    app: filezilla
  type: ClusterIP
  ports:
    - name: HTTP
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: HTTPS
      protocol: TCP
      port: 3001
      targetPort: 3001
